Split into multiple presentations

--- a/index.html
+++ b/index.html
@@ -9,324 +9,9 @@
         <link rel="stylesheet" href="node_modules/reveal.js/lib/css/zenburn.css">
     </head>
     <body>
-        <div class="reveal">
-            <div class="slides">
-                <section>
-                    <h1>Domain-driven design</h1>
-
-                    <img src="images/domain-driven-design.png" height="300" />
-                </section>
-
-                <section>
-                    <section>
-                        <h2>Introduction</h2>
-                    </section>
-
-                    <section>
-                        <h2>"The Blue Book"</h2>
-                        <h4>Domain-Driven Design: Tackling Complexity in the Heart of Software</h4>
-
-                        <p>Eric Evans, 2003</p>
-
-                        <img src="images/domain-driven-design-evans.jpg" height="300" />
-
-                        <aside class="notes">
-                            <p>Domain-driven design was coined by Eric Evans in his book with the same name.</p>
-
-                            <p>Eric Evans has worked as a designer and programmer on large systems in several complex
-                                business and technical domains since the 1980's.</p>
-                        </aside>
-                    </section>
-
-                    <section>
-                        <h2>"The Red Book"</h2>
-                        <h4>Implementing Domain-Driven Design</h4>
-
-                        <p>Vaughn Vernon, 2013</p>
-
-                        <img src="images/implementing-domain-driven-design-vernon.jpg" height="300" />
-                    </section>
-
-                    <section>
-                        <h2>What is domain-driven design?</h2>
-
-                        <blockquote>DDD is a set of tools that assist in designing and implementing software that
-                            delivers high value, both strategically and tactically.
-                        </blockquote>
-
-                        <aside class="notes">
-                            <p>Important: DDD is not a technical tool but an approach to software design.</p>
-                        </aside>
-                    </section>
-
-                    <section>
-                        <h2>Traditional software issues</h2>
-
-                        <ul>
-                            <li>Developers and domain experts talk in different languages, making it difficult for them
-                                to understand each other and collaborate
-                            </li>
-                            <li class="fragment">Software that gets developed often results in a translation/mapping
-                                between how the business thinks/operates and how the developer interprets that
-                            </li>
-                            <li class="fragment">Changes to the software take a lot of time to implement, and code
-                                breaks easily when changes are made
-                            </li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2>How DDD helps</h2>
-
-                        <ul>
-                            <li>Creates a common, shared language between the domain experts, the software developers,
-                                and the software, without requiring translation in between
-                            </li>
-                            <li class="fragment">Facilitates a creative collaboration between domain experts and
-                                technical experts (developers), in order to produce software with high value for the
-                                business
-                            </li>
-                            <li class="fragment">Results in software that is built for change</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2>Strategic design</h2>
-                        <ul>
-                            <li>Helps to understand what are the most important software investments to make</li>
-                            <li>Helps to cleanly separate systems and business concerns</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2>Tactical design</h2>
-                        <ul>
-                            <li>Allows developers to produce software that correctly reflects the mental model of the
-                                domain expert(s)
-                            </li>
-                            <li>Allows developers to produce software that is highly testable and less error prone</li>
-                        </ul>
-                    </section>
-                </section>
-
-                <section>
-                    <section>
-                        <h2>The Ubiquitous Language</h2>
-                    </section>
-
-                    <section>
-                        <dl>
-                            <dt>ubiquitous (adjective)</dt>
-                            <dd>Present, appearing, or found everywhere.</dd>
-                            <dt>ubiquitous language</dt>
-                            <dd>A shared language developed by the team - a team composed of both domain experts and
-                                software developers.
-                            </dd>
-                        </dl>
-                    </section>
-
-                    <section>
-                        <p>The ubiquitous language...</p>
-
-                        <ul>
-                            <li>is shared by everyone on the project team</li>
-                            <li>is used everywhere within that team: in code, discussions, issue trackers (JIRA), etc.
-                            </li>
-                            <li>is developed by having discussions with both consensus and compromise</li>
-                            <li>only exists within a specific (bounded) context</li>
-                            <li>grows and changes over time</li>
-                        </ul>
-                    </section>
-                </section>
-
-                <section>
-                    <section>
-                        <h2>Domains, Subdomains, and Bounded Contexts</h2>
-                    </section>
-
-                    <section>
-                        <dl>
-                            <dt>domain</dt>
-                            <dd>A sphere of knowledge, influence, or activity. The subject area to which the user
-                                applies a program is the domain of the software.
-                            </dd>
-                        </dl>
-
-                        <aside class="notes">The domain is the business problem that the software is trying to solve.
-                        </aside>
-                    </section>
-
-                    <section>
-                        <h2>Subdomains</h2>
-
-                        <blockquote>Any attempt to define the business of even a moderately complex organization in a
-                            single, all-encompassing model will be at best extremely difficult and will usually fail.
-                        </blockquote>
-                    </section>
-
-                    <section>
-
-                        <ul>
-                            <li>The goal is not to create a single, all-inclusive model of an organization's entire
-                                business domain.
-                            </li>
-                            <li>Instead, domain models should be focussing on only one specific area of the whole
-                                business domain.
-                            </li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2>Types of subdomains</h2>
-
-                        <dl>
-                            <dt>core domain</dt>
-                            <dd>A part of the business domain that is of primary importance to the success of the
-                                organization.
-                            </dd>
-                            <dt>supporting subdomain</dt>
-                            <dd>A part of the business domain that is essential, yet not core. It is somewhat
-                                specialized.
-                            </dd>
-                            <dt>generic subdomain</dt>
-                            <dd>A part of the business domain that captures nothing special to the business, but is
-                                required for the overall business solution.
-                            </dd>
-                        </dl>
-                    </section>
-                </section>
-
-                <section>
-                    <section>
-                        <h3>Context</h3>
-
-                        <p>Every use of a given domain term, phrase, or sentence has a specific contextual meaning. Any
-                            use of the term outside that (bounded) context could, and probably does, mean something
-                            different.</p>
-                    </section>
-                </section>
-
-                <section>
-                    <h3>Definitions</h3>
-
-                    <section>
-                        <dl>
-                            <dt>domain</dt>
-                            <dd>A sphere of knowledge, influence, or activity. The subject area to which the user
-                                applies a program is the domain of the software.
-                            </dd>
-
-                            <dt>model</dt>
-                            <dd>A system of abstractions that describes selected aspects of a domain and can be used to
-                                solve problems related to that domain
-                            </dd>
-                        </dl>
-                    </section>
-
-                    <section>
-                        <dl>
-                            <dt>ubiquitous language</dt>
-                            <dd>A language structured around the domain model and used by all team members to connect
-                                all the activities of the team with the software.
-                            </dd>
-
-                            <dt>context</dt>
-                            <dd>The setting in which a word or statement appears that determines its meaning. Statements
-                                about a model can only be understood in a context.
-                            </dd>
-                        </dl>
-                    </section>
-
-                    <section>
-                        <dl>
-                            <dt>bounded context</dt>
-                            <dd>A description of a boundary (typically a subsystem, or the work of a particular team)
-                                within which a particular model is defined and applicable.
-                            </dd>
-                        </dl>
-                    </section>
-                </section>
-
-                <section>
-                    <h1>Tactical DDD</h1>
-                </section>
-
-                <section>
-                    <h3>Domain objects</h3>
-
-                    <ul>
-                        <li>Entities</li>
-                        <li>Value objects</li>
-                    </ul>
-                </section>
-
-                <section>
-                    <h3>Entities</h3>
-
-                    <section>
-                        <ul>
-                            <li>Have their own identity</li>
-                            <li>Have a lifecycle</li>
-                            <li>Their attributes may change over time</li>
-                        </ul>
-                    </section>
-                </section>
-
-                <section>
-                    <h3>Value Objects</h3>
-
-                    <section>
-                        <ul>
-                            <li>Have no conceptual identity</li>
-                            <li>Cannot change over time</li>
-                        </ul>
-                    </section>
-                </section>
-
-                <section>
-                    <h3>Aggregates</h3>
-                </section>
-
-                <section>
-                    <h2>Further reading</h2>
-
-                    <section>
-                        <h3>Domain-Driven Design Reference</h3>
-
-                        <p>Eric Evans, 2015</p>
-
-                        <img src="images/domain-driven-design-reference-evans.jpg" height="300" />
-                    </section>
-
-                    <section>
-                        <h3>Domain-Driven Design Distilled</h3>
-
-                        <p>Vaughn Vernon, 2016</p>
-
-                        <img src="images/domain-driven-design-distilled-vernon.jpg" height="300" />
-                    </section>
-                </section>
-            </div>
-
-            <script src="node_modules/reveal.js/lib/js/head.min.js"></script>
-            <script src="node_modules/reveal.js/js/reveal.js"></script>
-            <script>
-                Reveal.initialize({
-                    dependencies: [
-                        {
-                            src: 'node_modules/reveal.js/plugin/notes/notes.js',
-                            async: true
-                        },
-                        {
-                            src: 'node_modules/reveal.js/plugin/highlight/highlight.js',
-                            async: true,
-                            callback: function () {
-                                hljs.initHighlightingOnLoad();
-                            }
-                        }
-                    ]
-                });
-            </script>
-        </div>
+        <ul>
+            <li><a href="01-introduction.html">Introduction / strategic vs. tactical design / ubiquitous language</a>
+            </li>
+        </ul>
     </body>
 </html>
