Resize the Sun Tzu background image

--- a/01-introduction.html
+++ b/01-introduction.html
@@ -211,8 +211,8 @@
                         </aside>
                     </section>
 
-                    <section data-background-color="#000" data-background-image="images/sun-tzu.jpg"
-                        data-background-size="75%" data-background-position="bottom left">
+                    <section data-background-color="#000" data-background-image="images/sun-tzu.png"
+                        data-background-size="25%" data-background-position="bottom left">
                         <blockquote>
                             <p>Strategy without tactics is the slowest route to victory. Tactics without strategy is the
                                 noise before defeat.</p>
