Define the background color of the Clausewitz slide
This prevents the weird outline from showing when switching slides.

--- a/01-introduction.html
+++ b/01-introduction.html
@@ -223,8 +223,8 @@
                         </blockquote>
                     </section>
 
-                    <section data-background-image="images/von-clausewitz.jpeg" data-background-size="25%"
-                        data-background-position="bottom right">
+                    <section data-background-color="#fff" data-background-image="images/von-clausewitz.jpeg"
+                        data-background-size="25%" data-background-position="bottom right">
                         <blockquote>
                             <p>Tactics are the use of armed forces in a particular battle, while strategy is the
                                 doctrine of the use of individual battles for the purpose of war.</p>
