Add a photo slide

--- a/01-introduction.html
+++ b/01-introduction.html
@@ -205,7 +205,9 @@
                 <section>
                     <section>
                         <h2>Strategic vs Tactical design</h2>
+                    </section>
 
+                    <section data-background-image="images/military-strategy.png" data-background-size="cover">
                         <aside class="notes">
                             <p>To explain the difference we will look into military history</p>
                         </aside>
