Use the book titles as headers

--- a/01-introduction.html
+++ b/01-introduction.html
@@ -177,8 +177,8 @@
                     </section>
 
                     <section>
-                        <h2>"The Blue Book"</h2>
-                        <h4>Domain-Driven Design: Tackling Complexity in the Heart of Software</h4>
+                        <h2>Domain-Driven Design</h2>
+                        <h4>Tackling Complexity in the Heart of Software</h4>
 
                         <p>Eric Evans, 2003</p>
 
@@ -193,8 +193,7 @@
                     </section>
 
                     <section>
-                        <h2>"The Red Book"</h2>
-                        <h4>Implementing Domain-Driven Design</h4>
+                        <h2>Implementing Domain-Driven Design</h2>
 
                         <p>Vaughn Vernon, 2013</p>
 
