Add some notes to the tactical/strategic part

--- a/01-introduction.html
+++ b/01-introduction.html
@@ -206,9 +206,11 @@
                         <h2>Strategic vs Tactical design</h2>
                     </section>
 
-                    <section data-background-image="images/military-strategy.png" data-background-size="cover">
+                    <section data-background-image="images/military-strategy.png" data-background-color="#000"
+                        data-background-size="cover">
                         <aside class="notes">
-                            <p>To explain the difference we will look into military history</p>
+                            <p>To explain the difference we will look at some definitions by historic military
+                                strategists</p>
                         </aside>
                     </section>
 
@@ -240,6 +242,8 @@
                                 <li>tactics are about successfully executing battles</li>
                                 <li>strategy is about using battles to win the war</li>
                             </ul>
+
+                            <p>If you pick the wrong battles, you can win all the battles but still lose the war.</p>
                         </aside>
                     </section>
 
@@ -260,6 +264,11 @@
 
                         <p>Splitting up a large domain model and focusing development effort on what is strategically
                             important for the business (the <em>core domain</em>).</p>
+
+                        <aside class="notes">
+                            <p>Again, if we focus on the wrong part of the business, we may do everything right without
+                                actually providing value.</p>
+                        </aside>
                     </section>
 
                     <section>
