--- a/01-introduction.html
+++ b/01-introduction.html
@@ -424,6 +424,22 @@
                         </code></pre>
                     </section>
                 </section>
+
+                <section>
+                    <section>
+                        <h2>Summary</h2>
+
+                        <ul>
+                            <li>Strategic design helps splitting up a large domain model and focusing on the most
+                                important part
+                            </li>
+                            <li>Tactical design helps creating a rich domain model that captures business logic</li>
+                            <li>The ubiquitous language is used by all team members to prevent having to translate
+                                between different technical and domain terminology
+                            </li>
+                        </ul>
+                    </section>
+                </section>
             </div>
 
             <script src="node_modules/reveal.js/lib/js/head.min.js"></script>
