Remove redundant slide

--- a/01-introduction.html
+++ b/01-introduction.html
@@ -143,20 +143,11 @@
                             <li>Developers and domain experts talk in different languages, making it difficult for them
                                 to understand each other and collaborate
                             </li>
-                            <li class="fragment">Software that gets developed often results in a translation/mapping
-                                between how the business thinks/operates and how the developer interprets that
+                            <li class="fragment">Developers misunderstand how the business operates, resulting in
+                                software that misses the point
                             </li>
                             <li class="fragment">Changes to the software take a lot of time to implement, and code
                                 breaks easily when changes are made
-                            </li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2>Traditional software issues</h2>
-
-                        <ul>
-                            <li>Developers misinterpret user requirements, resulting in software that misses the point.
                             </li>
                         </ul>
                     </section>
