--- a/01-introduction.html
+++ b/01-introduction.html
@@ -146,6 +146,7 @@
                             <li class="fragment">Developers misunderstand how the business operates, resulting in
                                 software that misses the point
                             </li>
+                            <li class="fragment">Technical details leak into the software model</li>
                             <li class="fragment">Changes to the software take a lot of time to implement, and code
                                 breaks easily when changes are made
                             </li>
